force-app/main/default/objects/CRMG_WF__Workflow_Log__c/CRMG_WF__Workflow_Log__c.object-meta.xml
<CustomObject>
    <label>Workflow Log</label>
    <nameField>
        <displayFormat>Log- {0000}</displayFormat>
        <label>Workflow Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>