force-app/main/default/objects/CRMG_WF__Workflow_Log__c/fields/CRMG_WF__Processed_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Processed_Record_Ids__c</fullName>
    <label>Processed Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>