force-app/main/default/objects/CRMG_WF__Workflow_Log__c/fields/CRMG_WF__TimeTrigger_Action__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__TimeTrigger_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimeTrigger-Action</label>
    <referenceTo>CRMG_WF__Workflow_Action__c</referenceTo>
    <relationshipLabel>Workflow Logs</relationshipLabel>
    <relationshipName>Workflow_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>