force-app/main/default/objects/CRMG_WF__Workflow_Log__c/fields/CRMG_WF__Workflow__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Workflow__c</fullName>
    <label>Workflow</label>
    <referenceTo>CRMG_WF__Workflow__c</referenceTo>
    <relationshipLabel>Workflow Logs</relationshipLabel>
    <relationshipName>Workflow_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>