force-app/main/default/objects/CRMG_WF__Workflow_Log__c/fields/CRMG_WF__Workflow_Action__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Workflow_Action__c</fullName>
    <label>Workflow Action</label>
    <referenceTo>CRMG_WF__Action__c</referenceTo>
    <relationshipLabel>Workflow Logs</relationshipLabel>
    <relationshipName>Workflow_Logs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>